# Course-project-2---Racing-simulator

./: Boots_AllTerrain.cpp  Boots_AllTerrain.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  Camel_HighSpeed.cpp  Camel_HighSpeed.h  Carpet_Flying.cpp  Carpet_Flying.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Racing_simulator.cpp  Transport.cpp  Transport.h
